--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -2,14 +2,41 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Shape Up! | Meditation</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/main_rwd.css">
+    <link rel="shortcut icon" href="images/shape_up_logo.webp">
+    <title>Shape Up!</title>
 </head>
 
 <body>
-	<main>
-	    <h1>Meditation</h1>
-		<h2>Under Construction</h2>
-	</main>
+    <header>
+        <img src="images/shape_up_logo.png" alt="shape up" width="80">
+        <h2><em class="shadow">Shape Up!</em></h2>
+        <h3>Find the best fit for you</h3>
+    </header>
+    <nav id="nav_menu">
+        <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="strength.html">Strength training</a></li>
+            <li><a href="cardio.html">Cardio Exercises</a></li>
+            <li><a href="stress.html">Stress Relief</a></li>
+            <li><a href="diet/index.html">Healthy Diets</a></li>
+        </ul>
+    </nav>
+	<footer>
+        (c) 2022 Shape Up!
+    </footer>
+    <script>
+        $(document).ready(function() {
+            $("#nav_menu").slicknav({
+                prependTo: '#mobile_menu',
+                label: '',
+                closedSymbol: '>',
+                openedSymbol: '<',
+                allowParentLinks: true
+            });
+        });
+    </script>
 </body>
 </html>
