--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -15,7 +15,7 @@
         <h2><em class="shadow">Shape Up!</em></h2>
         <h3>Find the best fit for you</h3>
     </header>
-    <nav id="nav_menu">
+     <nav id="nav_menu">
         <ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="strength.html">Strength training</a></li>
@@ -24,6 +24,18 @@
             <li><a href="diet/index.html">Healthy Diets</a></li>
         </ul>
     </nav>
+    <main>
+        <aside>
+            <h2>Additional resources</h2>
+            <ul>
+                <li><a href="text/stress_tips.txt">Physical activity and health</a></li>
+                <li><a href="text/prepare.txt">Stretching exercises</a></li>
+                <li><a href="text/strength_training.txt">Strength training</a></li>
+                <li><a href="cardio/index.html">Cardiovascular training</a></li>
+                <li><a href="text/vipassana.txt">Yoga workout</a></li>
+            </ul>
+        </aside>
+    </main>
 	<footer>
         (c) 2022 Shape Up!
     </footer>
