--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <link rel="shortcut icon" href="images/shape_up_logo.webp">
     <title>Shape Up!</title>
 </head>
