--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -3,18 +3,21 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="shortcut icon" href="../images/shape_up_logo.webp">
+    <link rel="stylesheet" href="../styles/meals.css">
     <title>Shape Up!</title>
 </head>
 
 <body>
     <header>
-        <img src="images/shape_up_logo.png" alt="shape up" width="80">
-        <h2><em class="shadow">Shape Up!</em></h2>
-        <h3>Find the best fit for you</h3>
+        <div id="header-content">
+            <img src="../images/shape_up_logo.png" alt="shape up" width="80">
+            <div id="header-text">
+                <h2><em class="shadow">Shape Up!</em></h2>
+                <h3>Find the best fit for you</h3>
+            </div>
+        </div>
     </header>
+	
      <nav id="nav_menu">
         <ul>
             <li><a href="index.html" class="current">Home</a></li>
