--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../styles/meals.css">
+    <link rel="stylesheet" href="styles/meals.css">
     <title>Shape Up!</title>
 </head>
 
