--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../styles/meals.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <title>Shape Up!</title>
 </head>
 
