--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="../styles/main.css">
     <title>Shape Up! | Meditation</title>
 </head>
-
 <body>
     <header>
         <div id="header-content">
@@ -16,8 +15,8 @@
             </div>
         </div>
     </header>
-	
-     <nav id="nav_menu">
+
+    <nav id="nav_menu">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="strength.html">Strength Training</a></li>
@@ -26,42 +25,58 @@
             <li><a href="diet/index.html">Healthy Diets</a></li>
         </ul>
     </nav>
+
     <main>
         <aside>
             <h2>Why Meditate?</h2>
             <ul>
                 <li><strong>Be happy:</strong> Meditation causes the pituitary gland in your brain to secrete endorphins that help elevate mood and have a positive effect on the whole body.</li>
                 <li><strong>Reduce stress:</strong> Endorphins also reduce stress levels in the brain.</li>
-                <li><strong>Focus:</strong> Through meditation, you can learn self-discipline so your mind can focus with increased efficiency.</li>
-                <li><strong>Sleep better:</strong> Scientific studies have shown that those who meditate enhance their slow-wave sleep pattern which can help fight insomnia.</li>
+                <li><strong>Focus:</strong> Through meditation you can learn self-discipline so your mind can focus with increased efficiency.</li>
+                <li><strong>Sleep better:</strong> Scientific studies have shown that those who meditate enhance their slow wave sleep pattern which can help fight insomnia.</li>
                 <li><strong>Lower blood pressure:</strong> Research has also shown that meditation can reduce blood pressure, both in the short term and later in life.</li>
-                <li><strong>Pain relief:</strong> The long-term practice of meditation can lead to physical changes in the brain.</li>
+                <li><strong>Pain relief:</strong> The long-term practice of meditation can lead to physical changes in the brain that help alter the perception of pain.</li>
             </ul>
         </aside>
 
         <section>
             <h2>What is Meditation?</h2>
             <p>
-                Meditation is one path toward transforming the mind. Buddhist meditation practices encourage and develop concentration, clarity, and emotional positivity. When you begin a meditation practice, you may learn the patterns and habits of your mind. Meditation offers you a way to cultivate new and more positive ways to approach the things you do throughout your day. Meditation can have a transformative effect and can lead to positive changes as well as a new understanding of life.
+                Meditation is one path toward transforming the mind. Buddhist meditation practices encourage 
+                and develop concentration, clarity, and emotional positivity. When you begin a meditation practice, 
+                you may learn the patterns and habits of your mind. Meditation offers you a way to cultivate new and 
+                more positive ways to approach the things you do throughout your day. Meditation can have a transformative 
+                effect and can lead to positive changes as well as a new understanding of life.
             </p>
+
             <h3>Video of a woman meditating</h3>
             <video controls>
-                <source src="../videos/meditation_video.mp4" type="video/mp4">
+                <source src="media/meditation.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+
             <h3>Choose your meditation music</h3>
             <audio controls>
-                <source src="../audio/meditation_music_1.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
+                <source src="media/ambient_grand_piano.mp3" type="audio/mp3">
+                Your browser does not support the audio tag.
             </audio>
             <audio controls>
-                <source src="../audio/meditation_music_2.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
+                <source src="media/body_and_soul.mp3" type="audio/mp3">
+                Your browser does not support the audio tag.
+            </audio>
+            <audio controls>
+                <source src="media/time_inevitability.mp3" type="audio/mp3">
+                Your browser does not support the audio tag.
+            </audio>
+            <audio controls>
+                <source src="media/waves_and_tears.mp3" type="audio/mp3">
+                Your browser does not support the audio tag.
             </audio>
         </section>
     </main>
-	<footer>
-        &copy; 2022 Shape Up!
+
+    <footer>
+        (c) 2022 Shape Up!
     </footer>
 </body>
 </html>
