--- a/stress/meditate.html
+++ b/stress/meditate.html
@@ -51,25 +51,25 @@
 
             <h3>Video of a woman meditating</h3>
             <video controls>
-                <source src="media/meditation.mp4" type="video/mp4">
+                <source src="../media/meditation.mp4" type="video/mp4">
       
             </video>
 
             <h3>Choose your meditation music</h3>
             <audio controls>
-                <source src="media/ambient_grand_piano.mp3" type="audio/mp3">
+                <source src="../media/ambient_grand_piano.mp3" type="audio/mp3">
     
             </audio>
             <audio controls>
-                <source src="media/body_and_soul.mp3" type="audio/mp3">
+                <source src="../media/body_and_soul.mp3" type="audio/mp3">
 
             </audio>
             <audio controls>
-                <source src="media/time_inevitability.mp3" type="audio/mp3">
+                <source src="../media/time_inevitability.mp3" type="audio/mp3">
 
             </audio>
             <audio controls>
-                <source src="media/waves_and_tears.mp3" type="audio/mp3">
+                <source src="../media/waves_and_tears.mp3" type="audio/mp3">
 
             </audio>
         </section>
